[project]
name = "aiml-pulse"
version = "0.1.0"
description = "Local-First AI/ML field-trends aggregator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "feedparser>=6.0",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "plotly>=5.20",
    "streamlit>=1.35",
    "pydantic>=2.7",
    "tenacity>=8.3",
    "jinja2>=3.1",
    "ruff>=0.15.19",
]

[project.scripts]
pulse = "aiml_pulse.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=aiml_pulse --cov-report=term-missing"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.19",
    "vcrpy>=8.2.1",
]
